<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_open"
        android:title="@string/sidebar_menu_open"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_pin"
        android:title="@string/sidebar_menu_pin"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mark_read"
        android:title="@string/sidebar_menu_mark_read"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mute"
        android:title="@string/sidebar_menu_mute"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_profile"
        android:title="@string/sidebar_menu_view_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/sidebar_menu_delete"
        app:showAsAction="never" />
</menu>
